--- a/.gervichstoreid.yml
+++ b/.gervichstoreid.yml
@@ -2,6 +2,6 @@ database:
   driver: "postgres"
   max_conns: 100
   max_idle: 4
-  read: ""
-  write: ""
+  read: "host=127.0.0.1 user=postgres password=renekton18 dbname=db_gervichstoreid sslmode=disable"
+  write: "host=127.0.0.1 user=postgres password=renekton18 dbname=db_gervichstoreid sslmode=disable"
 PORT: 8080
